log/build_2026-04-20_14-15-49/hospital_voice/stderr.log
  File "/home/ubuntu/hospital-robot-ROS2/install/hospital_voice/lib/python3.10/site-packages/hospital_voice/tts_node.py", line 37
    out_msg = ByteMultiArray()
    ^^^^^^^
SyntaxError: expected 'except' or 'finally' block

